ci: Fix workflow for artifact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,13 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x, 22.x]
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
@@ -34,10 +34,11 @@ jobs:
       continue-on-error: true
     
     - name: Package extension
-      run: npx vsce package
+      run: npx @vscode/vsce package
     
     - name: Upload VSIX artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: vsix-${{ matrix.node-version }}
+        name: vsix-node-${{ matrix.node-version }}
         path: '*.vsix'
+        retention-days: 30
